--- a/server/package.json
+++ b/server/package.json
@@ -22,5 +22,9 @@
     "nodemon": "^3.1.0",
     "otp-generator": "^4.0.1",
     "socket.io": "^4.7.4"
-  }
+  },
+  "engines": {
+  "node": "20.x"
+}
+
 }
