--- a/server/.env
+++ b/server/.env
@@ -2,4 +2,4 @@ MONGODB_URI=mongodb+srv://muzaif635:07ZRlgjaj0uKNYQh@webchatdb.jmaoj.mongodb.net
 PORT=3000
 EMAIL_ID=muzaif583@gmail.com
 PASS=jqzp soxh pgzw scvt
-FRONTEND_URI=https://web-chat-1-1tia.onrender.com
+FRONTEND_URI=web-chat-frontend-pbl16prst-muzaifs-projects.vercel.app
